<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_consent_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.nilepoint.monitorevaluatemobile.ConsentInfoActivity">

    <include
        layout="@layout/app_bar_basic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/consent_content_margin"
        android:layout_width="match_parent"
        android:theme="@style/consentContentText"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/consent_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_consent_content_intro"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/consent_condition1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_consent_agreement1"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/consent_condition2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_consent_agreement2"
            android:textSize="17sp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/consent_obtained_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Consent Obtained"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/consent_button"
        android:text="@string/form_consent_button_text"
        android:layout_gravity="center"
        style="@style/defaultButton"
        android:layout_width="150dp"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/consent_error"
        android:layout_gravity="center"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_consent_error_msg"
        android:textSize="17sp" />



</LinearLayout>
