<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:background="@color/colorWhite"
    tools:context="com.nilepoint.monitorevaluatemobile.update.ParticipantProfileHouseholdFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:theme="@style/activityCardViewDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/is_head_of_household"
            android:theme="@style/participantReviewHeadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/profile_is_hoh"
            android:theme="@style/reviewContentText"
            android:text="No"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View style="@style/Divider"
            android:background="@color/colorSecondaryText"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <!-- Residence -->
        <TextView
            android:text="@string/residence"
            android:theme="@style/participantReviewHeadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/profile_hh_residence"
            android:theme="@style/reviewContentText"
            android:text="address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View style="@style/Divider"
            android:background="@color/colorSecondaryText"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <!-- members in hh -->

        <TextView
            android:text="@string/household_members"
            android:theme="@style/participantReviewHeadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View style="@style/Divider"
            android:background="@color/colorSecondaryText"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/hh_members_profile_recyclerView"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
    </ScrollView>


</FrameLayout>
